--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "fs-extra": "^7.0.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
-    "s3rver": "^3.0.3",
+    "s3rver": "git+https://git@github.com/gblizycki/s3rver.git",
     "serverless-offline": "^4.10.0",
     "shelljs": "^0.8.2"
   },
